Bug 790905 - Replace no-op principal check with something real. r=luke

This would have caught this bug.